# code-trainer

./: .dockerignore  Dockerfile  README.md  app.py  docker-compose.yml  problems.json  pyproject.toml  requirements.txt
tests/: test_app.py
