[project]
name = "code-trainer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi-mcp[all]==0.3.4",
    "fastapi==0.110.0",
    "httpx==0.27.2",
    "jinja2==3.1.2",
    "starlette==0.36.3",
    "uvicorn==0.29.0",
]
